change admin panel design

--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1618,3 +1618,20 @@ form span.repass {
     /*color: #818181;*/
     display: block;
 }
+
+
+.ref-lvl-table {
+    cursor:pointer;
+}
+
+.ref-button {
+    display: inline !important;
+}
+
+.ref-reference {
+    padding-left: 10px;
+}
+
+.edit-ref-lvl-modal {
+    max-height: 250px !important;
+}
