add terms&conditions, privacy policy, return policy pages

--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1429,6 +1429,10 @@ form span.repass {
     opacity: 0;
 }
 
+.footer_link {
+    margin: 0 10px;
+}
+
 /********************************
             NEWS
 ********************************/
