--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1758,6 +1758,7 @@ form span.repass {
 .legal_content {
     font-size: 1.4em;
     margin-top: 20px;
+    text-align: justify;
 }
 .legal_content p, .legal_content h5 {
     margin-top: 15px;
