--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1783,6 +1783,11 @@ form span.repass {
     margin-top: 20px;
     text-align: justify;
 }
+.legal_content h5, .legal_content h6 {
+    font-size: 1.2em;
+}
+
+
 .legal_content p, .legal_content h5 {
     margin-top: 15px;
 }
