--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1421,6 +1421,10 @@ form span.repass {
     opacity: 0;
 }
 
+.footer_link {
+    margin: 0 10px;
+}
+
 /********************************
             NEWS
 ********************************/
@@ -1587,4 +1591,18 @@ form span.repass {
 
 #mCSB2_container {
     margin-right: 5px;
+}
+
+.legal_content {
+    font-size: 1.4em;
+    margin-top: 20px;
+    text-align: justify;
+}
+.legal_content h5, .legal_content h6 {
+    font-size: 1.2em;
+}
+
+
+.legal_content p, .legal_content h5 {
+    margin-top: 15px;
 }
