--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -908,6 +908,9 @@ td.blue-white {
 .nav.header__nav .nav__link {
     padding: 10px 10px;
 }
+.right_header_nav .nav__link {
+    padding: 10px 10px;
+}
 
 .dropdown-menu__logout-form .logout-button {
     background: transparent;
