--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1811,6 +1811,6 @@ form span.repass {
 
 input[type=email], .dropdown-menu__form,
 .input-block-wrapper__label-wrapper, #captchaCode, .BDC_CaptchaDiv,
-#merchantList {
+#merchantList, #amcharts-stock_chart_div {
     direction: ltr !important;
 }
