--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1665,31 +1665,36 @@ form span.repass {
 			9. Modal Change Referral System
 ****************************************/
 
-#refModal {
-    max-width: 380px;
-    max-height: 380px;
+#refModal, #editLimitModal {
+    max-width: 400px;
+    max-height: 400px;
     background-size: cover;
     margin: 0 auto;
     margin-top: 100px;
     padding: 0 10px;
 }
 
-#refModal .modal-header {
+#refModal .modal-header,
+#editLimitModal .modal-header {
 /*    color: rgba(255, 255, 255, .5);
     border-bottom: solid 1px rgba(255, 255, 255, .25);*/
     padding: 5px 15px;
 }
 
-#refModal .modal-dialog {
+#refModal .modal-dialog,
+#editLimitModal .modal-dialog
+{
     width: 100%;
     margin: 10px auto 0 auto;
 }
 
-#refModal .modal-content {
+#refModal .modal-content,
+#editLimitModal .modal-content {
     background: #e2ebf9;
 }
 
-#refModal .content form input {
+#refModal .content form input,
+#editLimitModal .content form input{
     display: block;
     width: 75%;
     border: none;
@@ -1704,7 +1709,7 @@ form span.repass {
 #user-edit-form .input-block-wrapper,
 #delete-order-info__form .input-block-wrapper,
 #order-delete-modal--date-picker .input-block-wrapper,
-#transaction-search-form .input-block-wrapper{
+#transaction-search-form .input-block-wrapper {
     display: inline-block;
     height: 100%;
     width: 100%;
@@ -1797,7 +1802,8 @@ form span.repass {
 .legal_content p, .legal_content h5 {
     margin-top: 15px;
 }
-#feedback-form .input-block-wrapper {
+#feedback-form .input-block-wrapper,
+#edit-currency-limit-form .input-block-wrapper{
     display: inline-block;
     width: 100%;
     overflow: hidden;
@@ -1805,7 +1811,8 @@ form span.repass {
 }
 
 #feedback-form .input-block-wrapper__input-wrapper,
-#transaction-search-form .input-block-wrapper__input-wrapper{
+#transaction-search-form .input-block-wrapper__input-wrapper,
+#edit-currency-limit-form .input-block-wrapper__input-wrapper{
     overflow: hidden;
     height: auto;
 }
