--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1849,3 +1849,7 @@ input[type=email], .dropdown-menu__form,
 #min-sum-notification {
     display: none; width: auto; font-size: 14px
 }
+
+#currency-limits-table tr:hover {
+    cursor: pointer;
+}
