--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1892,3 +1892,7 @@ input[type=email], .dropdown-menu__form,
 #register_button:disabled {
     background: #b9c4d8;
 }
+
+.noty_header {
+    margin-bottom: 10px;
+}
