--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1898,3 +1898,7 @@ input[type=email], .dropdown-menu__form,
 .noty_header {
     margin-bottom: 10px;
 }
+
+#noty_topCenter_layout_container {
+    margin-top: 250px !important;
+}
