add statement page for admin

--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1902,3 +1902,7 @@ input[type=email], .dropdown-menu__form,
 #noty_topCenter_layout_container {
     margin-top: 250px !important;
 }
+
+#walletsTable tbody tr:hover {
+    cursor: pointer;
+}
