--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -532,7 +532,8 @@ input.item_input,
 			RIGHT SIDEBAR
 *********************************/
 .nickname,
-.news_title {
+.news_title,
+.notification-title {
     color: #525f74;
     margin: 10px 0 0;
     font-weight: 700;
@@ -1509,7 +1510,7 @@ form span.repass,  form span.repass-error{
 }
 
 .chat_message .message_time {
-    margin: 0px 10px;
+    margin: 0 10px;
 }
 
 .chat_message > button {
@@ -1959,10 +1960,73 @@ input[type=email], .dropdown-menu__form,
     position: absolute;
     right: 0;
     z-index: 999;
-    padding: 2px 5px;
+    padding: 5px;
+}
+#notifications-header {
+    display: block;
+    height: 25px;
+    background-color: #FFF;
+    color: #525f74;
 }
 
-#notification-icon .notifications-body {
-    background-color: #e2ebf9;
+
+#notifications-header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+#notifications-header li a {
+    display: block;
+    margin: 0 5px;
+}
+
+
+
+#notifications-body-wrapper {
+    display: block;
+    padding: 3px 5px;
+    max-height: 300px;
+    background-color: #FFF;
     color: #525f74;
+    overflow: hidden;
+}
+
+.notification-item {
+    margin-bottom: 5px;
+    border: 1px solid rgba(209, 229, 249, 1);
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.notification-item p {
+    margin-bottom: 0;
+}
+
+.notification-item.unread {
+    background-color: rgba(209, 229, 249, 0.5);
+}
+.notification-item.unread:hover {
+    background-color: rgba(209, 229, 249, 0.8);
+    cursor: pointer;
+}
+.notification-title {
+    color: #525f74;
+    margin: 0;
+    font-weight: 700;
+}
+
+.notification-item.read {
+    background-color: inherit;
+}
+
+.notification-message {
+    font-size: 1.2rem;
+    margin-bottom: 4px;
+}
+
+.notification-time, .notif-remove {
+    font-size: 1rem;
+}
+#notifications-body-wrapper .mCSB_container {
+    margin-right: 10px;
 }
