--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1958,3 +1958,10 @@ input[type=email], .dropdown-menu__form,
 #current-datetime {
     float: right;
 }
+
+#authoritiesTable {
+    background-color: #FFF;
+}
+#authoritiesTable td {
+    font-size: 1.5rem;
+}
