--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1965,3 +1965,9 @@ input[type=email], .dropdown-menu__form,
 #authoritiesTable td {
     font-size: 1.5rem;
 }
+
+#manualBalanceChangeForm .form-item {
+    display: inline-block;
+    margin: 5px 10px;
+    width: 30%;
+}
