add some styling

--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1842,7 +1842,9 @@ form span.repass,  form span.repass-error{
 }
 #feedback-form .input-block-wrapper,
 #edit-currency-limit-form .input-block-wrapper,
-#news-add-editor-form .input-block-wrapper {
+#news-add-editor-form .input-block-wrapper,
+#edit-merchantCommission-form .input-block-wrapper,
+#edit-commission-form .input-block-wrapper{
     display: inline-block;
     width: 100%;
     overflow: hidden;
@@ -1852,7 +1854,9 @@ form span.repass,  form span.repass-error{
 #feedback-form .input-block-wrapper__input-wrapper,
 #transaction-search-form .input-block-wrapper__input-wrapper,
 #edit-currency-limit-form .input-block-wrapper__input-wrapper,
-#news-add-editor-form .input-block-wrapper__input-wrapper {
+#news-add-editor-form .input-block-wrapper__input-wrapper,
+#edit-merchantCommission-form .input-block-wrapper__input-wrapper,
+#edit-commission-form .input-block-wrapper__input-wrapper {
     overflow: hidden;
     height: auto;
 }
@@ -1896,7 +1900,9 @@ input[type=email], .dropdown-menu__form,
     color: #337ab7
 }
 
-#currency-limits-table tr:hover {
+#currency-limits-table tr:hover,
+#commissions-table tr:hover,
+#merchant-commissions-table tr:hover {
     cursor: pointer;
 }
 #register_button {
@@ -1957,4 +1963,8 @@ input[type=email], .dropdown-menu__form,
 
 #current-datetime {
     float: right;
+}
+
+#commissionsMenu button {
+    width: 250px;
 }
