--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2131,3 +2131,7 @@ input[type=email], .dropdown-menu__form,
 .noMerchants {
     font-size: 1.5rem;
 }
+
+.right-to-left {
+    direction: rtl !important;
+}
