--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2135,3 +2135,7 @@ input[type=email], .dropdown-menu__form,
 .right-to-left {
     direction: rtl !important;
 }
+
+#transferButton {
+    margin-bottom: 10px;
+}
