--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2153,3 +2153,7 @@ textarea#remark {
 .black-border {
     border: 1px solid #000000;
 }
+
+#creditsOperationInfo table tr td:first-child {
+    width: 250px;
+}
