--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2157,3 +2157,7 @@ textarea#remark {
 #creditsOperationInfo table tr td:first-child {
     width: 250px;
 }
+
+#invoiceInfoTable tr td:first-child {
+    width: 200px;
+}
