--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1921,7 +1921,7 @@ input[type=email], .dropdown-menu__form,
     background: #525f74;
 }
 
-#register_button:disabled, #submitAcceptInvoice:disabled {
+#register_button:disabled, #submitAcceptInvoice:disabled, #submit-btc:disabled {
     background: #b9c4d8;
 }
 
