--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2159,3 +2159,9 @@ textarea#remark {
     color: #cf0800;
     font-size: 1.2rem;
 }
+
+#btc-wallet-buttons {
+    display: inline-block;
+    margin-top: 20px;
+    text-align: center;
+}
