--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -575,8 +575,18 @@ input.item_input,
     margin: 6px;
 }
 
+.marginTop-10 {
+    margin-top: 10px;
+    display: block;
+}
+
 .marginTop-15 {
     margin-top: 15px;
+    display: block;
+}
+
+.marginTop-25 {
+    margin-top: 25px;
     display: block;
 }
 
@@ -1061,6 +1071,14 @@ td.blue-white {
     padding: 5px;
 }
 
+.dashboard-stop-sell-buy__button {
+    width: 49%;
+    background: #969faf;
+    color: white;
+    border: none;
+    padding: 5px;
+}
+
 .dashboard-accept__button {
     color: #ffff00;
     width: 85%;
@@ -1430,7 +1448,6 @@ td.blue-white {
     display: block;
     max-height: 360px;
     overflow-y: hidden;
-
 }
 
 table tbody .blink,
