--- a/Controller/src/main/webapp/client/css/action-buttons.css
+++ b/Controller/src/main/webapp/client/css/action-buttons.css
@@ -6,6 +6,7 @@
 .confirm_user_button,
 .confirm_admin_button,
 .accept_button,
+.accept_holded_button,
 .post_holded_button {
     background-color: #00dd1c;
     color: white;
