--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1415,7 +1415,8 @@ td.blue-white {
 
 .modal-form-dialog
 .modal-footer button,
-.confirm-button {
+.confirm-button,
+#surveyContainer .panel-footer input {
     background: #969faf;
     color: #fff;
     padding: 5px 25px;
@@ -2215,4 +2216,8 @@ textarea#remark {
 
 .stop {
     margin-bottom: 11.3px;
+}
+
+#surveyContainer .panel-footer input{
+    margin-top: 20px;
 }
