--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2269,15 +2269,11 @@ textarea#remark {
 }
 
 #order-filter-selector {
-    height: 50px
+    height: 70px
 }
 
-#order-filter-selector {
-    position: relative;
-}
 
 #order-filter-selector > div {
-    margin: 5px 10px;
     height: 100%;
 }
 
@@ -2301,4 +2297,16 @@ textarea#remark {
 
 #roles-table td:nth-child(2), #roles-table td:nth-child(3) {
     text-align: center;
+}
+
+@media (max-width: 1500px) {
+    #order-filter-selector {
+        height: 70px;
+    }
+}
+
+@media (min-width: 1500px) {
+    #order-filter-selector {
+        height: 50px;
+    }
 }
