--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2312,3 +2312,7 @@ textarea#remark {
 input.wallet-number:hover{
     cursor:pointer;
 }
+
+#generate-address, #copy-address, #refill-address {
+    margin: 10px 0;
+}
