add currency description, fix design

--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -435,6 +435,14 @@ th, td {
     width: 100%;
 }
 
+.mywallets_table td:first-child span {
+    font-size: 0.9rem;
+}
+.mywallets_table td:last-child {
+    vertical-align: middle;
+}
+
+
 .currency_table td:first-child {
     cursor: pointer;
 }
@@ -455,6 +463,14 @@ th, td {
 .currency_table tr td:nth-child(2) {
     width: 122px;
 }
+
+#mywallets_table_wrapper {
+    height: 500px;
+    overflow: hidden;
+    display: block;
+}
+
+
 #currency_table_wrapper {
     height: 310px;
     overflow: hidden;
@@ -678,7 +694,7 @@ tr.active td {
 td.blue-white {
     background-color: #969fb0;
     color: #fff;
-    padding: 8px 12px;
+    padding: 8px;
     text-align: center;
 }
 
