--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2333,3 +2333,12 @@ input.copyable:hover{
 #generate-address, #copy-address, #refill-address {
     margin: 10px 0;
 }
+
+#subtract-fee-from-amount:hover{
+    cursor:pointer;
+}
+
+#subtract-fee-from-amount {
+    font-size: 1.5rem;
+;
+}
