--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2354,5 +2354,8 @@ input.copyable:hover{
 
 #subtract-fee-from-amount {
     font-size: 1.5rem;
-;
+}
+
+#btc-wlt-download-btn {
+    margin-bottom: 20px;
 }
