add exclude zero balances

--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2359,3 +2359,8 @@ input.copyable:hover{
 .download-btn {
     margin-bottom: 20px;
 }
+
+#exclude-zero-balances-container {
+    font-size: 1.3rem;
+    margin: 10px 0;
+}
