Squashed commit of the following:
commit 3b7c29fb8238c85a8ddd3464ffe8c989b71d8d60
Author: golvazin <wayfarer2006@ukr.net>
Date:   Fri Jan 26 16:15:07 2018 +0200

    fix

commit 92457bf08dc25213d27658aeace7ac445b4a10d7
Author: golvazin <wayfarer2006@ukr.net>
Date:   Tue Jan 16 16:23:20 2018 +0200

    fix

commit a97bb35130514142405a01fb40a98d428ce2656f
Author: golvazin <wayfarer2006@ukr.net>
Date:   Tue Jan 16 16:22:20 2018 +0200

    fix

commit 12d0affbae1838eb4239357156f6c98f6d80b408
Author: golvazin <wayfarer2006@ukr.net>
Date:   Tue Jan 16 16:17:57 2018 +0200

    btc wallet - raw tx output - add funds locking

commit 140f22287a21b3d00852efe5fe4042c63907d739
Author: golvazin <wayfarer2006@ukr.net>
Date:   Mon Jan 15 16:48:09 2018 +0200

    btc wallet - raw tx output - no locking

commit 4b02555a8bcb3c712bb0b33a2172f189f8d6c29e
Author: golvazin <wayfarer2006@ukr.net>
Date:   Wed Dec 13 17:37:15 2017 +0200

    btc wallet - add remove payment button

commit 2ab3fdb5655dfa5194af2273e61f6290cdda8d10
Author: golvazin <wayfarer2006@ukr.net>
Date:   Fri Jan 12 18:43:08 2018 +0200

    add raw tx

commit 534597485f8d63510e18e8a6608174ace94c1e5a
Author: golvazin <wayfarer2006@ukr.net>
Date:   Thu Jan 11 15:02:08 2018 +0200

    update bitcoin lib

--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -2360,6 +2360,14 @@ input.copyable:hover{
     margin-bottom: 20px;
 }
 
+#btc-prepare-raw-modal .modal-body {
+    font-size: 1.5rem;
+}
+
+#btc-prepare-raw-modal .modal-body div {
+    margin: 15px 5px;
+}
+
 #exclude-zero-balances-container {
     font-size: 1.3rem;
     margin: 10px 0;
