--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -438,10 +438,13 @@ th, td {
 .mywallets_table td:first-child span {
     font-size: 0.9rem;
 }
+
+.mywallets_table td:nth-child(2) {
+    vertical-align: middle;
+}
 .mywallets_table td:last-child {
     vertical-align: middle;
 }
-
 
 .currency_table td:first-child {
     cursor: pointer;
@@ -454,6 +457,7 @@ th, td {
 
 /*my*/
 .mywallets_table th:last-child,
+.mywallets_table th:nth-child(2),
 .currency_table th:nth-child(2),
 .currency_table th:last-child {
     text-align: center;
