--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -492,6 +492,14 @@ th, td {
     float: right;
 }
 
+.total_usd_child
+{
+    display: inline-block;
+    width: 45%;
+    font-weight: 300;
+    color: #63a20a;
+
+}
 /**********************************
 			Main Content
 ***********************************/
