--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1996,6 +1996,7 @@ input[type=email], .dropdown-menu__form,
 }
 
 #currency-limits-table tr:hover,
+#external-wallets-table tr:hover,
 #commissions-table tr:hover,
 #merchant-commissions-table tr:hover {
     cursor: pointer;
